Added extra voice over descriptions

--- a/MessagesExtension/Support/Localizable.strings
+++ b/MessagesExtension/Support/Localizable.strings
@@ -45,3 +45,154 @@
 "Snake3" = "Medusa face with stuck-out tongue and winking eye";
 "Snake4" = "Medusa face throwing a kiss";
 "Snake5" = "Kissing medusa face with closed eyes";
+
+// Accessories
+"Accessories0" = "Candy corn";
+"Accessories1" = "Pumpkin sweet";
+"Accessories2" = "Yellow autumn leaf";
+"Accessories3" = "Brown autumn leaf";
+"Accessories4" = "Yellow autumn leaf";
+"Accessories5" = "Carved pumpkin";
+"Accessories6" = "Round sunglasses";
+"Accessories7" = "Fake nose & glasses";
+"Accessories8" = "Googly eye glasses";
+"Accessories9" = "Pirate eye path for right eye";
+"Accessories10" = "Horns";
+"Accessories11" = "Green bow with bone";
+"Accessories12" = "Blue bow with brown eye";
+"Accessories13" = "Witch hat";
+"Accessories14" = "Pumpkin mask";
+"Accessories15" = "Bat ears headband";
+"Accessories16" = "Car ears headband";
+"Accessories17" = "Snake";
+"Accessories18" = "Seaweed";
+"Accessories19" = "Moon";
+"Accessories20" = "Candle with lit flame";
+"Accessories21" = "Bat";
+"Accessories22" = "Horde of bats";
+"Accessories23" = "Lots of orange & black hearts";
+"Accessories24" = "Pink heart";
+"Accessories25" = "Orange heart";
+"Accessories26" = "Purple heart";
+"Accessories27" = "Sparkles";
+"Accessories28" = "Teardrop";
+"Accessories29" = "Blush";
+"Accessories30" = "Sleeping bubble";
+
+// Text
+"Text0" = "Trick or treat";
+"Text1" = "Halloween party!";
+"Text2" = "Keeping it spooky";
+"Text3" = "Happy Halloween";
+"Text4" = "Boo!";
+"Text5" = "Too cute to spook";
+"Text6" = "Gone haunting";
+
+// Head
+"Head0" = "Blank werewolf face";
+"Head1" = "Blank swamp monster face";
+"Head2" = "Blank vampire face";
+"Head3" = "Blank medusa face";
+"Head4" = "Blank skull face";
+"Head5" = "Blank pumpkin";
+
+// Mouth
+"Mouth0" = "Open skeleton mouth";
+"Mouth1" = "Grimacing skeleton mouth";
+"Mouth2" = "Upset skeleton mouth";
+"Mouth3" = "Howling skeleton mouth";
+"Mouth4" = "Happy skeleton mouth";
+"Mouth5" = "Shocked skeleton mouth";
+"Mouth6" = "Swamp monster mouth";
+"Mouth7" = "Open swamp monster mouth";
+"Mouth8" = "Happy swamp monster mouth";
+"Mouth9" = "Sad swamp monster mouth";
+"Mouth10" = "Shocked swamp monster mouth";
+"Mouth11" = "Vampire mouth";
+"Mouth12" = "Upside down vampire mouth";
+"Mouth13" = "Happy vampire mouth";
+"Mouth14" = "Smirking vampire mouth";
+"Mouth15" = "Yawning vampire mouth";
+"Mouth16" = "Shocked vampire mouth";
+"Mouth17" = "Upset vampire mouth";
+"Mouth18" = "Excited vampire mouth";
+"Mouth19" = "Medusa mouth";
+"Mouth20" = "Kissing medusa mouth";
+"Mouth21" = "Shouting medusa mouth";
+"Mouth22" = "Licking medusa mouth";
+"Mouth23" = "Howling medusa mouth";
+"Mouth24" = "Shocked medusa mouth";
+"Mouth25" = "Upset medusa mouth";
+"Mouth26" = "Closed medusa mouth";
+"Mouth27" = "Howling werewolf mouth";
+"Mouth28" = "Upset werewolf mouth";
+"Mouth29" = "Werewolf mouth";
+"Mouth30" = "Happy werewolf mouth";
+"Mouth31" = "Excited werewolf mouth";
+"Mouth32" = "Grimacing pumpkin mouth";
+"Mouth33" = "Scared pumpkin mouth";
+"Mouth34" = "Excited pumpkin mouth";
+"Mouth35" = "Happy pumpkin mouth";
+"Mouth36" = "Shocked pumpkin mouth";
+"Mouth37" = "Pumpkin nose";
+
+// Eye
+"Eye0" = "Blue eye";
+"Eye1" = "Green eye";
+"Eye2" = "Brown eye";
+"Eye3" = "Closed medusa eye";
+"Eye4" = "Medusa eye looking right";
+"Eye5" = "Medusa eye looking left";
+"Eye6" = "Right happy Medusa eye";
+"Eye7" = "Left happy medusa eye";
+"Eye8" = "Right angry medusa eye";
+"Eye9" = "Left angry medusa eye";
+"Eye10" = "Right shocked medusa eye";
+"Eye11" = "Left shocked medusa eye";
+"Eye12" = "Right skeptical medusa eye";
+"Eye13" = "Left skeptical medusa eye";
+"Eye14" = "Right medusa eye";
+"Eye15" = "Left medusa eye";
+"Eye16" = "Closed werewolf eye";
+"Eye17" = "Werewolf eye looking right";
+"Eye18" = "Werewolf eye looking left";
+"Eye19" = "Sleeping werewolf eye";
+"Eye20" = "Tired werewolf eye";
+"Eye21" = "Happy werewolf eye";
+"Eye22" = "Looking up and to the left werewolf eye";
+"Eye23" = "Looking up and to the right werewolf eye";
+"Eye24" = "Excited werewolf eye";
+"Eye25" = "Werewolf eye";
+"Eye26" = "Closed vampire eye";
+"Eye27" = "Looking left smirking eye";
+"Eye28" = "Looking right smirking eye";
+"Eye29" = "Vampire eye";
+"Eye30" = "Looking up and to the left vampire eye";
+"Eye31" = "Looking up and to the right vampire eye";
+"Eye32" = "Sad vampire eye";
+"Eye33" = "Tired vampire eye";
+"Eye34" = "Happy vampire eye";
+"Eye35" = "Looking left vampire eye";
+"Eye36" = "Looking right vampire eye";
+"Eye37" = "Crying skeleton eye";
+"Eye38" = "Sad skeleton eye";
+"Eye39" = "Happy skeleton eye";
+"Eye40" = "Excited skeleton eye";
+"Eye41" = "Looking right skeleton eye";
+"Eye42" = "Looking left ekeleton eye";
+"Eye43" = "Skeleton eye";
+"Eye44" = "Angry skeleton eye";
+"Eye45" = "Closed swamp monster eye";
+"Eye46" = "Excited swamp monster eye";
+"Eye47" = "Happy swamp monster eye";
+"Eye48" = "Sleeping swamp monster eye";
+"Eye49" = "Looking to the left swamp monster eye";
+"Eye50" = "Looking to the right swamp monster eye";
+"Eye51" = "Sad swamp monster eye";
+"Eye52" = "Swamp monster eye";
+"Eye53" = "In love eye";
+"Eye54" = "Pumpkin eye";
+"Eye55" = "Sad pumpkin eye";
+"Eye56" = "Angry right pumpkin eye";
+"Eye57" = "Angry left pumpkin eye";
+"Eye58" = "Happy pumpkin eye";
